MDEV-15262 Wrong results for SELECT..WHERE non_indexed_datetime_column=indexed_time_column